# cabaltest

./: Main.hs  README.md  cabaltest.cabal
test/simple/: Bar.hs  Baz.hs  Foo.hs  simple.cabal
