name:                cabaltest
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable foo
  main-is:             Foo.hs
  build-depends:       base
  default-language:    Haskell2010

executable bar
  main-is:             Bar.hs
  build-depends:       base
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base
  default-language:    Haskell2010
